2017-08-05
    * server/time.c: Make firewalls choose their direction to cast based on direction,
      not sp. Fixes bug #834.
    * common/button.c: Fix rotation of firewalls to also use direction.
      Fix the animation problem that caused a segfault, too. Solves bug #835.

2017-07-29	Rick Tanner
	* lib/help/statistics.en: Update statistics help file with information on
	  damage per second, and time played.

2017-07-27	Daniel Hawkins
	* server/c_misc.c: Add damage per second calculation to "statistics"
	  command.

2017-07-24	Kevin Zheng
	* server/attack.c: Play attack sounds on the map
	* server/commands.c: Allow players to forget spells

2017-06-17	Daniel Hawkins
	* server/attack.c: Update display for pk to only show when player kills a
	  player other than self.

2017-05-31	Rick Tanner
	* lib/help/nextkey.en: New help file for nextkey command
	* lib/help/prevkey.en: New help file for prevkey command

2017-05-20	Kevin Zheng
	* socket/sounds.c: Play region music if a map doesn't have music

2017-02-18	Daniel Hawkins
	* server/monster.c: Prevent monster_compute_path from being called for
	  confused monsters.

2016-06-03  Daniel Hawkins
	* common/map.c: Only check for null tile map if we tried to load;
	  if we didn't try to load, tile map was already non-null.

2016-05-23  Daniel Hawkins
	* common/map.c: Prevent a potential segfault in get_map_from_coord() and
	  out_of_map() if load_and_link_tiled_map() returns a null map. It was
	  used before it was verified in previous behavior. Updated the documentation
	  for each function to state the initial map passed to it must not be NULL.

2016-05-22  Daniel Hawkins
	* server/server.c: Move the static string reference into the condition
	  branch, since we only use it on that branch.

2016-05-21  Daniel Hawkins
	* common/los.c: Refactored set_wall() to recycle a couple variables to
	  reduce recursion overhead.
	* plugins/cfanim/cfanim.c: Refactored get_boolean() to not use strncmp(),