@@ -1,4 +1,8 @@
-2017-08-05
+2017-08-09  Daniel Hawkins
+    * common/living.c: Fix incomplete totaling of equipped item power
+      in fix_object(). Should fix bug #648.
+
+2017-08-05  Daniel Hawkins
     * server/time.c: Make firewalls choose their direction to cast based on direction,
       not sp. Fixes bug #834.
     * common/button.c: Fix rotation of firewalls to also use direction.
